Updated About Me

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="Portfolio"
       content="MS Portfolio"
     />
+    <base href="/">
     
     <title>Mansur Saleem</title>
   </head>
